# rolemesh

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  NOTICE  PLAN.md  README.md  SECURITY.md  design-agent-status-events.md  docker-compose.dev.yml  docker-compose.observability.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
container/: Dockerfile  Dockerfile.egress-gateway  build-egress-gateway.sh  build.sh  orchestrator-entrypoint.sh  orchestrator.Dockerfile  webui.Dockerfile
contracts/: README.md  openapi.yaml  websocket-protocol.md
deploy/compose/: README.md  compose.keycloak.yaml  compose.redteam.yaml  compose.yaml
deploy/kind/: README.md  cluster.yaml  down.sh  up.sh
docs/: 1-overall-architecture-cn.md  1-overall-architecture.md  10-event-stream-architecture-cn.md  10-event-stream-architecture.md  11-steering-architecture-cn.md  11-steering-architecture.md  12-approval-architecture-cn.md  12-approval-architecture.md  12-hitl-approval-architecture-cn.md  12-hitl-approval-architecture.md  13-a1-self-approval-plan.md  13-safety-overview-cn.md  13-safety-overview.md  14-container-hardening-architecture-cn.md  14-container-hardening-architecture.md  15-safety-framework-architecture-cn.md  15-safety-framework-architecture.md  16-egress-control-architecture-cn.md  16-egress-control-architecture.md  17-attack-simulation-matrix-cn.md  17-attack-simulation-matrix.md  18-rls-architecture-cn.md  18-rls-architecture.md  19-skills-architecture-cn.md  19-skills-architecture.md  2-nats-ipc-architecture-cn.md  2-nats-ipc-architecture.md  20-evaluation-architecture-cn.md  20-evaluation-architecture.md  21-container-runtime-decoupling.md  21-frontdesk-architecture.md  21-hitl-approval-S2-notes.md  21-hitl-approval-S3-notes.md  21-hitl-approval-S4-notes.md  21-hitl-approval-S5-notes.md  21-hitl-approval-plan-cn.md  21-hitl-approval-plan.md  21-hitl-approval-session-prompts.md  22-container-runtime-decoupling.md  23-rke2-production-deploy.md  (+28 more)
docs/design/: approval-module.md  approval-module.zh.md  audit-log.md  audit-log.zh.md  auth-approval-v6.md  auth-architecture.md  auth-architecture.zh.md
docs/egress/: deployment.md
docs/frontdesk-impl/: README.md  handbook.md  migration-to-main.md  phase-a-foundation.md  phase-b-delegation-core.md  phase-c-integration.md
docs/observability/: setup.md  spike-evaluation.md  spike.md
docs/specs/: auth-implementation.md  auth-implementation.zh.md
docs/webui-backend-v1.1-sessions/: 00a-inv-foundations.md  00b-migrations-rls.md  00c-openapi-shell.md  01a-coworkers-runs.md  01b-ws-protocol.md  01c-frontend-chat.md  02a-models-credentials-mcp.md  02b-tools-dual-write.md  02c-credential-proxy-user-mode.md  03a-approvals-v1.md  03b-skills-per-tenant.md  03plus-drop-tools-column.md  04-safety-ui.md  README.md
docs/webui-ui-redesign-v2-sessions/: README.md  v2-00-foundations.md  v2-01-chat-shell.md  v2-02-settings-shell.md  v2-03-coworker-wizard.md  v2-04-activity-shell.md  v2-05-approvals-popover.md  v2-06-visual-polish.md  v2-A-foundations-and-shells.md  v2-B-coworker-wizard-and-credentials.md  v2-C-activity-approvals-polish.md
redteam/: seed.py
redteam/mcp/: Dockerfile  README.md  _common.py  fetch_mcp.py  files_mcp.py  poison_markers.py  poison_mcp.py  records_mcp.py  requirements.txt
redteam/promptfoo/: README.md  promptfooconfig.yaml  provider.py  repro_crescendo_bola.py  requirements.txt  smoke.py
scripts/: smoke_bootstrap.sh  verify-hardening.sh
src/agent_runner/: __main__.py  backend.py  claude_backend.py  ipc_mcp.py  main.py  mcp_client.py  message_stream.py  pi_backend.py
src/pi/: __init__.py  _version.py  mcp_naming.py
src/rolemesh/: __init__.py  bootstrap.py  main.py
src/webui/: __main__.py  admin.py  api_v1.py  auth.py  config.py  dependencies.py  main.py  oidc_routes.py  safety_validation.py  schemas.py  schemas_v1.py  ws.py
tests/: README.md  conftest.py  mock_mcp_server.py  test_audit_actor_resolution.py  test_backend_capabilities.py  test_bootstrap_multi_user.py  test_container_cleanup_image_whitelist.py  test_delete_user_cancels_tasks.py  test_e2e.py  test_e2e_usage_pipeline.py  test_handle_agent_message_ipc.py  test_im_admission_backfill.py  test_inv1_tenant_predicate_lint.py  test_inv_cred_lint.py  test_ipc_forward_compat_ignores_unknown_fields.py  test_marker_discipline.py  test_multi_tenant_e2e.py  test_openapi_codegen_freshness.py  test_openapi_contract.py  test_pending_turn_guard.py  test_run_lifecycle.py  test_scheduled_task_created_by.py  test_schema_alters.py  test_send_via_coworker_web_persist.py  test_skill_created_by_user_id_alignment.py  test_skill_manifest_constant.py  test_skill_manifest_constant_consistency_ts.py  test_skills_integration.py  test_tenant_isolation_belt_and_braces.py  test_user_flow.py  test_web_gateway_hot_reload.py
tests/admin/: test_create_admin.py  test_production_tightening.py
tests/agent/: test_approval_awaiter.py  test_approval_hook.py  test_approval_policy.py  test_executor.py
tests/approval/: test_abort_cascade.py  test_api.py  test_approval_enum_translation.py  test_channel_fanout.py  test_db.py  test_engine.py  test_executor.py  test_list_parent_walk.py  test_notification.py  test_telegram_e2e_smoke.py
tests/attack_sim/: README.md  conftest.py  test_A_container_escape_k8s_spec.py  test_A_container_escape_spec.py  test_B_secret_exfil.py  test_C_prompt_injection.py  test_D_data_exfil.py  test_E_identity_isolation.py  test_E_tenant_isolation.py  test_F_approval_abuse.py  test_G_dos.py  test_H_config_attack.py  test_I_egress_gateway.py
tests/auth/: test_channel_identity_db.py  test_channel_identity_schema.py  test_credential_vault.py  test_current_user_tenant_guard.py  test_external_jwt_provider.py  test_oidc_provider.py  test_oidc_routes.py  test_permissions_role_model.py  test_token_vault.py
tests/channels/: test_admission.py  (+6 more)
web/: index.html  openapi.yaml  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-react/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+933 files in other folders)
