[project]
name = "rolemesh"
version = "0.1.0"
description = "Personal Claude assistant. Lightweight, secure, customizable."
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.0",
    "croniter>=2.0",
    "aiohttp>=3.9",
    "python-telegram-bot>=22.7",
    "slack-bolt>=1.27.0",
    "nats-py>=2.9",
    "aiodocker>=0.23",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "PyJWT[crypto]>=2.8",
    "httpx>=0.27",
    "cryptography>=42",
    "python-dotenv>=1.0",
]

[project.scripts]
rolemesh = "rolemesh.main:main_sync"
rolemesh-webui = "webui.main:main"
rolemesh-eval = "rolemesh.evaluation.cli:main"

[project.optional-dependencies]
# Evaluation framework — Inspect AI based, manual / nightly only.
# Not pulled into the main runtime so a stock `uv sync` stays slim.
eval = [
    "inspect-ai>=0.3",
]
pi = [
    "anthropic>=0.49",
    "openai>=1.60",
    "google-genai>=1.0",
    "boto3>=1.35",
    "partial-json-parser>=0.2",
    "mistune>=3.0",
    "wcwidth>=0.2",
    "filelock>=3.0",
    "pyyaml>=6.0",
    "Pillow",
    "mcp>=1.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "testcontainers[postgres]>=4.0",
]
# V2 Safety Framework: optional ML-backed checks. Install with
# ``uv sync --extra safety-ml`` to enable presidio.pii,
# llm_guard.* and detect-secrets. build_orchestrator_registry
# degrades gracefully when any of these are missing.
safety-ml = [
    "llm-guard>=0.3",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "detect-secrets>=1.5",
    "openai>=1.60",
    # Direct dependency on torch so ``[tool.uv.sources]`` below can
    # route it to the CPU-only wheel. uv only honours the source
    # override for dependencies declared in this project's metadata;
    # listing torch transitively (via llm-guard) would otherwise
    # resolve from PyPI and pull in 2.8 GB of unused ``nvidia-*-cu12``
    # packages. Version constraint matches llm-guard 0.3.x's torch
    # pin so we don't accidentally force a resolver backtrack.
    "torch==2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# V2 P1.2+: pin torch to PyTorch's CPU-only wheel index. llm-guard's
# default torch install pulls ~2.8 GB of ``nvidia-*-cu12`` CUDA
# runtime packages that never execute on CPU deployments. The CPU
# wheel is a drop-in replacement (same API), drops every nvidia/*
# transitive dependency, and shrinks ``.venv`` by ~3 GB. Operators
# who actually need GPU-backed inference can override this mapping
# in their own pyproject or pass ``--index`` at install time.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.hatch.build.targets.wheel]
packages = ["src/rolemesh", "src/agent_runner", "src/webui", "src/pi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Exclude integration tests by default. They require a live Docker daemon
# and pull alpine on first run; PR CI stays fast, nightly runs them via
# `uv run pytest -m integration` (or `-m ""` to include everything).
addopts = "-m 'not integration and not e2e'"
markers = [
    "integration: end-to-end tests that require a live Docker daemon",
    "e2e: real-model end-to-end tests requiring Anthropic API + Docker",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = "src"

[tool.coverage.run]
source = ["src/rolemesh"]
omit = [
    "*/rolemesh/container/runner.py",
    "*/rolemesh/security/credential_proxy.py",
    "*/rolemesh/main.py",
    "*/rolemesh/ipc/*",
    "*/rolemesh/orchestration/task_scheduler.py",
    "*/rolemesh/orchestration/remote_control.py",
    "*/rolemesh/channels/slack.py",
    "*/rolemesh/channels/telegram.py",
    "*/rolemesh/agent/container_executor.py",
    "*/rolemesh/container/docker_runtime.py",
    "*/rolemesh/evaluation/cli.py",
    "*/rolemesh/evaluation/runner.py",
]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "types-croniter>=6.2.2.20260316",
    "asyncpg-stubs>=0.31",
]
